[package]
name = "discord-smasaku-shuttle"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-serenity = "0.35.1"
shuttle-runtime = "0.35.1"
anyhow = "1.0.66"
serenity = { version = "0.11.5", default-features = false, features = [
    "builder",
    "cache",
    "collector",
    "client",
    "gateway",
    "http",
    "model",
    "time",
    "unstable_discord_api",
    "utils",
    "rustls_backend",
] }
shuttle-secrets = "0.35.1"
tracing = "0.1.37"
tracing-subscriber = "0.2"
tokio = "1.26.0"
regex = "1"
dotenv = "0.15"
